# Training

./: .gitmodules  CMakeLists.txt  README.md  clean.sh  cmake.sh  cmock.yml  ctest.sh
Firmware/: CMakeLists.txt
Firmware/Applications/: CMakeLists.txt
Firmware/Applications/Assembly/: CMakeLists.txt  main.c
Firmware/Applications/Host/: CMakeLists.txt  main.c
Firmware/Applications/Idiocracy/: CMakeLists.txt  main.c
Firmware/Modules/: CMakeLists.txt
Firmware/Modules/Dumb/: CMakeLists.txt  Dumb.c  Dumb.h
Firmware/Modules/Dumber/: CMakeLists.txt  Dumber.c  Dumber.h
Firmware/Modules/Dummy/: CMakeLists.txt  Dummy.c  Dummy.h
Tests/: CMakeLists.txt
Tests/ComponentIntegrationTesting/DumbSuite/: CMakeLists.txt  Dumb_Decrypt_Suite.c  Dumb_Sign_Suite.c
Tests/ComponentTesting/: CMakeLists.txt
Tests/ComponentTesting/DumbSuite/: CMakeLists.txt  Dumb_Decrypt_Suite.c  Dumb_Sign_Suite.c
Tests/ComponentTesting/DumberSuite/: CMakeLists.txt  Dumber_Checksum_Compute_Suite.c  Dumber_HexEncode_Suite.c  Dumber_XOR_Buffer_Suite.c
Tests/ComponentTesting/DummySuite/: CMakeLists.txt  Dummy_PublicFunction_Suite.c
Tests/Mocks/: CMakeLists.txt
Tests/Mocks/Dumber/: MockDumber.c  MockDumber.h
Tests/TestFramework/: CMakeLists.txt  Startup
